# kdbx-rs

./: .envrc  CHANGELOG.md  Cargo.toml  README.md  flake.nix
docs/: kdbx.md
res/: README.md  kdbx4-aes256.kdbx  kdbx4-argon2-chacha20.kdbx  kdbx4-argon2.kdbx
res/test_input/: kdb-aes128.kdb  kdb-twofish.kdb  kdbx31-aes256.kdbx  kdbx4-aes256-legacy.kdbx  kdbx4-aes256.kdbx  kdbx4-argon2-key-file.kdbx  kdbx4-argon2-uncompressed.kdbx  kdbx4-argon2d-chacha20.kdbx  kdbx4-argon2d-twofish.kdbx  kdbx4-argon2id.kdbx  keepassxc-otp.kdbx
res/test_output/: generate_xml.xml
res/tests/: generate_xml.xml
src/: binary.rs  crypto.rs  database.rs  errors.rs  header.rs  lib.rs  main.rs  stream.rs  types.rs  utils.rs  variant_dict.rs  xml.rs
src/binary/: errors.rs  header.rs  header_fields.rs  kdb.rs  kdbx.rs  read.rs  states.rs  variant_dict.rs  wrapper_fields.rs
src/stream/: block_cipher.rs  hmac.rs  kdbx3.rs  pipeline.rs  random.rs  stream_cipher.rs
src/xml/: decoders.rs  parse.rs  serialize.rs  type_parsers.rs  types.rs
tests/: database_generate_xml.rs  database_loading.rs  database_parsing.rs  database_unlock.rs  kdb_loading.rs  kdbx_loading.rs  kdbx_parsing.rs  kdbx_unlock.rs  kdbx_unlock_key_file.rs  keepasxc_otp.rs  round_trip.rs
