[package]
name = "kdbx-rs"
version = "0.1.0"
authors = ["Tony Finn <tony@tonyfinn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
chrono = "0.4.11"
derive_more = "0.99.5"
thiserror = "1.0"
uuid = "0.8"
xml-rs = "0.8.3"

libflate = "1.0"
rust-argon2 = "0.8"

# Rust-Crypto
aes = "0.3.2"
block-modes = "0.3.3"
hmac = "0.7.1"
sha2 = "0.8.1"

[[bin]]
name = "kdbx-decrypt"
path = "src/bin/kdbx_decrypt.rs"

[[bin]]
name = "kdbx-dump-header"
path = "src/bin/kdbx_dump_header.rs"