[package]
name = "kdbx-rs"
version = "0.2.0"
authors = ["Tony Finn <tony@tonyfinn.com>"]
edition = "2018"
description = "Keepass 2 (KDBX) password database parsing and creation"
readme = "README.md"
repository = "https://gitlab.com/tonyfinn/kdbx-rs"
license = "GPL-3.0+"
keywords = ["kdbx", "keepass", "password", "parser"]
categories = ["encoding", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
chrono = "0.4.11"
derive_more = "0.99.5"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }
xml-rs = "0.8.3"
rand = "0.7"

libflate = "1.0"
rust-argon2 = "0.8"

# Rust-Crypto
aes = "0.3.2"
block-modes = "0.3.3"
chacha20 = "0.3.4"
hmac = "0.7.1"
salsa20 = "0.4.1"
sha2 = "0.8.1"
stream-cipher = "0.3.2"
twofish = "0.2.0"

[[bin]]
name = "kdbx-decrypt"
path = "src/bin/kdbx_decrypt.rs"

[[bin]]
name = "kdbx-dump-header"
path = "src/bin/kdbx_dump_header.rs"

[[bin]]
name = "kdbx-parse"
path = "src/bin/kdbx_parse.rs"

[[bin]]
name = "kdbx-generate"
path = "src/bin/kdbx_generate.rs"