[package]
name = "kdbx-rs"
version = "0.5.1"
authors = ["Tony Finn <tony@tonyfinn.com>"]
edition = "2021"
description = "Keepass 2 (KDBX) password database parsing and creation"
readme = "README.md"
repository = "https://gitlab.com/tonyfinn/kdbx-rs"
license = "GPL-3.0+"
keywords = ["kdbx", "keepass", "password", "parser"]
categories = ["encoding", "parser-implementations"]
rust-version = "1.57.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
derive_more = { version = "1.0", features = ["from", "try_from", "into", "try_into"] }
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
xml-rs = "0.8.22"
rand = "0.8"

libflate = "1.2"
rust-argon2 = "2.1"

# Rust-Crypto
aes = "0.8.2"
cbc = "0.1.2"
chacha20 = "0.9.0"
cipher = "0.4.3"
hmac = "0.12.1"
salsa20 = "0.10.2"
sha2 = "0.10.6"
twofish = "0.7.1"

[[bin]]
name = "kdbx-decrypt"
path = "src/bin/kdbx_decrypt.rs"

[[bin]]
name = "kdbx-dump-header"
path = "src/bin/kdbx_dump_header.rs"

[[bin]]
name = "kdbx-parse"
path = "src/bin/kdbx_parse.rs"

[[bin]]
name = "kdbx-generate"
path = "src/bin/kdbx_generate.rs"
